Re-organize the posts

--- a/_posts/2024-05-23-deep-learning-320-NN101.md
+++ b/_posts/2024-05-23-deep-learning-320-NN101.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Machine Learning 0.0.0: Machine Learning 101"
+title:  "Deep Learning 3.2.0: Neural Networks 101"
 date:   2024-05-23 12:00:00
-categories: machine-learning 
-tags: machine-learning
+categories: machine-learning deep-learning
+tags: neural-networks
 excerpt: This post contains a slide deck that explains basic concepts of Machine Learning with a focus on Nueural Networks.
 mathjax: true
 use_mermaid: true
